# tree-sitter-tera

./: CHANGELOG.md  Cargo.toml  package.json  pnpm-lock.yaml  release-please-config.json  tree-sitter.json
.github/workflows/: release-please.yml
