[package]
name = "tree-sitter-tera"
version = "0.1.0"
edition = "2021"
description = "Tree-sitter grammar for the Tera templating language."
readme = "README.md"
repository = "https://github.com/uncenter/tree-sitter-tera"
license = "MIT"
keywords = ["incremental", "parsing", "tera", "tree-sitter"]
categories = ["parsing", "text-editors"]
build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]
autoexamples = false

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[dev-dependencies]
tree-sitter = "0.24.3"

[build-dependencies]
cc = "1.1.22"
